quarkus-reactive-kafka-producer/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qs-order-rms
    app.kubernetes.io/name: qs-order-rms
    app.kubernetes.io/version: 1.0.0
  name: qs-order-rms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: qs-order-rms
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      labels:
        app: qs-order-rms
        app.kubernetes.io/name: qs-order-rms
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - args:
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        - -jar
        - /deployments/quarkus-run.jar
        command:
        - java
        image: quay.io/ibmcase/eda-qs-order-rms
        imagePullPolicy: Always
        # imagePullPolicy: IfNotPresent
        name: qs-order-rms
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /deployments/certs/server
          name: kafka-cert
          readOnly: false
          subPath: ""
        - mountPath: /deployments/certs/user
          name: user-cert
          readOnly: false
          subPath: ""
      serviceAccount: qs-prod-sa
      volumes:
      - name: kafka-cert
        secret:
          defaultMode: 384
          optional: true
          secretName: dev-cluster-ca-cert
      - name: user-cert
        secret:
          defaultMode: 384
          optional: true
          secretName: tls-user
